# trader-keras

./: .gitignore  CLAUDE.md  README.md  STATUS.md  bench_config.yaml  bench_config.yml  config.yaml  config.yml  pyproject.toml  run.py
conf/: config.yaml
conf/pipeline/: bench.yaml  predict.yaml  rl.yaml  rl_small.yaml
docs/: architecture-sim-env.md  backlog.md  batch_size_experiment.md  bench_full_report.md  chat1.md  env_requirements_default.md  issues.md  jax-notes.md  lightning_migration_report.md  logger.md  metatrader.md  multi-env-plan.md  open_lookback_windowing.md  oracle_baseline.md  plan_backbone_embedding.md  plan_registry.md  predictor_vs_rl_pipeline.md  prompt_orchestrator.md  proposal_pipeline_design.md  proposal_registries.md  rl-issues.md  rl-reward-sparsity.md  scaling_laws.md  stage1_proposal.md  stage2-plan.md  tasks.md
docs/tasks/: 70assets highest std but for , running 20k epochs.md  70assets with highest std run on 20k epochs.md  embeddings.py — does batch processing but that's for inference, not training data loading.md  modify vast ai to sort by DLPERF, also allow multi gpu instances.md  remote results differnt.. precision-2.md  remote results differnt.. precision.md  smaller batches.md  test chronos2 finetuning.md
docs/trader-old-docs/: architecture.md  bench_env_report.md  config_reference.md  env_specs.md  evaluation.md  good-ideas-from-legacy-env.md  icmarkets_asset_similarity.md  ideas.md  ideas3.md  issues-envs.md  issues_archived.md  (+15 more)
tests/: test_config.py  test_data_pipeline.py  test_model.py  test_policy_model.py  test_steps_data.py  test_steps_env.py  test_steps_model.py  test_steps_rl.py  test_steps_train.py
tools/: export_onnx.py
trader_keras/: __init__.py  config.py  constants.py  pipeline.py  trainer.py
(+18 files in other folders)
